Fix text alignment in Note and Pick

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -2,5 +2,7 @@
 .content {
   @extend %centering;
 
+  hyphens: auto;
   margin-bottom: $margin-gargantuan;
+  text-align: justify;
 }
