--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -34,8 +34,7 @@ h1 {
 p {
   @extend %white-spaces;
 
-  hyphens: auto;
-  text-align: justify;
+  text-align: inherit;
 }
 
 hr {
