--- a/src/css/widget/_note.scss
+++ b/src/css/widget/_note.scss
@@ -3,10 +3,4 @@
   color: $color-dark-light;
   font-size: rem($ratio-text-small);
   line-height: $line-height-small;
-
-  @media (min-width: $breakpoint-full) {
-    &.hang {
-      text-align: left;
-    }
-  }
 }
